--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
+language: go
 install:
-        curl -L https://git.io/misspell | bash
-
+        go get -u github.com/client9/misspell/cmd/misspell
 script:
-        ./bin/misspell .
+        misspell .
